@@ -4,8 +4,10 @@ import org.eclipse.edc.connector.controlplane.contract.spi.policy.ContractNegoti
 import org.eclipse.edc.participant.spi.ParticipantAgent;
 import org.eclipse.edc.policy.model.Operator;
 import org.eclipse.edc.spi.monitor.ConsoleMonitor;
+import org.eclipse.edc.spi.monitor.Monitor;
 import org.junit.jupiter.api.Test;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -13,14 +15,14 @@ import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
 class AccessPolicyFunctionTest {
 
-    private final AccessPolicyFunction accessPolicyFunction = new AccessPolicyFunction(new ConsoleMonitor());
+    private final AccessPolicyFunction accessPolicyFunction = new AccessPolicyFunction(new Monitor() {});
 
     @Test
     void Validate_EQ_Identity_Success() {
         //Arrange
         String identity = "123456789";
         ParticipantAgent participantAgent =
-                new ParticipantAgent(Map.of(), Map.of("edc:identity", identity));
+                new ParticipantAgent(Collections.emptyMap(), Map.of("edc:identity", identity));
 
         ContractNegotiationPolicyContext context = new ContractNegotiationPolicyContext(participantAgent);
 
@@ -37,7 +39,7 @@ class AccessPolicyFunctionTest {
         String identity = "123456789";
         String otherIdentity = "987654321";
         ParticipantAgent participantAgent =
-                new ParticipantAgent(Map.of(), Map.of("edc:identity", otherIdentity));
+                new ParticipantAgent(Collections.emptyMap(), Map.of("edc:identity", otherIdentity));
 
         ContractNegotiationPolicyContext context = new ContractNegotiationPolicyContext(participantAgent);
 
@@ -53,7 +55,7 @@ class AccessPolicyFunctionTest {
         //Arrange
         String identity = "123456789";
         ParticipantAgent participantAgent =
-                new ParticipantAgent(Map.of(), Map.of("edc:identity", identity));
+                new ParticipantAgent(Collections.emptyMap(), Map.of("edc:identity", identity));
 
         ContractNegotiationPolicyContext context = new ContractNegotiationPolicyContext(participantAgent);
 
@@ -70,7 +72,7 @@ class AccessPolicyFunctionTest {
         String identity = "123456789";
         String otherIdentity = "987654321";
         ParticipantAgent participantAgent =
-                new ParticipantAgent(Map.of(), Map.of("edc:identity", otherIdentity));
+                new ParticipantAgent(Collections.emptyMap(), Map.of("edc:identity", otherIdentity));
 
         ContractNegotiationPolicyContext context = new ContractNegotiationPolicyContext(participantAgent);
 
@@ -87,7 +89,7 @@ class AccessPolicyFunctionTest {
         String identity = "123456789";
         String otherIdentity = "987654321";
         ParticipantAgent participantAgent =
-                new ParticipantAgent(Map.of(), Map.of("edc:identity", identity));
+                new ParticipantAgent(Collections.emptyMap(), Map.of("edc:identity", identity));
 
         ContractNegotiationPolicyContext context = new ContractNegotiationPolicyContext(participantAgent);
 
@@ -104,7 +106,7 @@ class AccessPolicyFunctionTest {
         String identity = "123456789";
         String otherIdentity = "987654321";
         ParticipantAgent participantAgent =
-                new ParticipantAgent(Map.of(), Map.of("edc:identity", identity));
+                new ParticipantAgent(Collections.emptyMap(), Map.of("edc:identity", identity));
 
         ContractNegotiationPolicyContext context = new ContractNegotiationPolicyContext(participantAgent);
 
@@ -120,15 +122,15 @@ class AccessPolicyFunctionTest {
         //Arrange
         String identity = "123456789";
         ParticipantAgent participantAgent =
-                new ParticipantAgent(Map.of(), Map.of("edc:identity", identity));
+                new ParticipantAgent(Collections.emptyMap(), Map.of("edc:identity", identity));
         ContractNegotiationPolicyContext context = new ContractNegotiationPolicyContext(participantAgent);
         List<Operator> notSupportedOperators = List.of(Operator.GT, Operator.GEQ, Operator.LT, Operator.LEQ,
                 Operator.HAS_PART, Operator.IS_A, Operator.IS_ALL_OF, Operator.IS_ANY_OF, Operator.IS_NONE_OF);
 
         //Act
         boolean result = notSupportedOperators.stream().
-                map(operator ->accessPolicyFunction.evaluate(operator, identity, null, context)).
-                reduce(true, (a, b) -> a && b);
+                map(operator -> accessPolicyFunction.evaluate(operator, identity, null, context)).
+                reduce(false, (a, b) -> a || b);
 
         //Assert
         assertThat(result).isFalse();
